--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	
-	<%= render 'layouts/navigation' %>
-
+	<header class="navbar navbar-fixed-top navbar-default">
+		<div class="container">
+			<%= link_to "myApp", "", class: "btn btn-lg btn-success", id: "logo" %>
+			<div class="nav_item">
+				<%= link_to "link 1", "", class: "btn btn-default btn-warning" %>
+			</div>
+			<div class="nav_item">
+				<%= link_to "link 2", "", class: "btn btn-default btn-warning" %>
+			</div>
+			<div class="nav_item">
+				<%= link_to "link 3", "", class: "btn btn-default btn-warning" %>
+			</div>
+		</div>
+	</header>
 	<div class="container">
 		<%= yield %>
 
-		<%= render 'layouts/footer' %>
+		<div class="footer">
+			<p>&copy; MyApp 2015</p>
+		</div>
 	</div>
 </body>
 </html>
