--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -69,3 +69,15 @@ h2 {
 	text-align: center;
 	color: #777;
 }
+
+.chef_info {
+	margin-top: 10px;
+}
+
+.gravatar {
+	border-radius: 10px;
+}
+
+
+
+
