--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -14,7 +14,7 @@
 			View App as Guest User
 		</h3>
 		<h2 class="left">Browse and view app as guest and Sign up later</h2>
-		<p><%= link_to "Browse App Listing", "", class: "btn btn-warning btn-small" %></p>
+		<p><%= link_to "Browse App Listing", recipe_path, class: "btn btn-warning btn-small" %></p>
 	</div>
 
 	<div class="col-lg-4">
